--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "crypto-js": "^4.1.1",
+    "express": "^4.18.2",
     "lottie-web": "^5.12.0",
     "ngx-lottie": "^10.0.0",
     "rxjs": "~7.8.0",
